--- a/.github/workflows/backlog-reset.yml
+++ b/.github/workflows/backlog-reset.yml
@@ -20,9 +20,14 @@ on:
         required: true
         default: "0"
 
+concurrency:
+  group: backlog-reset-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   import-and-prepare-autoclose:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       issues: write
       contents: read
